--- a/life_blood_network/homepage/templates/homepage/login.html
+++ b/life_blood_network/homepage/templates/homepage/login.html
@@ -10,23 +10,28 @@
 		<button type="button text-align-end" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
   {% endif %}
-
-  <form action="{% url 'login_view' %}" method="post">
-		{% csrf_token %}
-
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email address</label>
-			<input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-			<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+	<div class="row justify-content-center">
+		<div class="col-4" >
+			<form action="{% url 'login_view' %}" method="post">
+				{% csrf_token %}
+		
+				<div class="mb-3">
+					<label for="exampleInputEmail1" class="form-label">Email address</label>
+					<input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+					<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+				</div>
+		
+				<div class="mb-3">
+					<label for="exampleInputPassword1" class="form-label">Password</label>
+					<input type="password" name="password" class="form-control" id="exampleInputPassword1">
+				</div>
+				<div class="d-flex justify-content-center">
+					<button type="submit" class="btn btn-primary text-center">Login</button>
+				</div>
+		
+			</form>
 		</div>
+	</div>
 
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password</label>
-			<input type="password" name="password" class="form-control" id="exampleInputPassword1">
-		</div>
-
-		<button type="submit" class="btn btn-primary">Submit</button>
-
-	</form>
 	
 {% endblock %}
