--- a/life_blood_network/homepage/templates/homepage/register.html
+++ b/life_blood_network/homepage/templates/homepage/register.html
@@ -4,61 +4,77 @@
 
 {% block body %}
   <h1>Register Yourself</h1>
+<div class="row justify-content-center">
+	<div class="col-8">
+		<form action="{% url 'register_view' %}" method="post">
+			{% csrf_token %}
+			
+			{{ form }}
+			<!-- <div class="mb-3">
+				<label for="username" class="form-label">First Name: </label>
+				<input type="text" name="first_name" required class="form-control" id="username" aria-describedby="emailHelp">
+			</div>
+	
+			<div class="mb-3">
+				<label for="first_name" class="form-label">Last_name: </label>
+				<input type="text" name="last_name" required class="form-control" id="first_name" aria-describedby="emailHelp">
+			</div>
+	
+			<div class="mb-3">
+				<label for="username" class="form-label">Username: </label>
+				<input type="text" name="username" required class="form-control" id="username" aria-describedby="emailHelp">
+			</div>
+			
+			<div class="mb-3">
+				<label for="exampleInputEmail1" class="form-label">Email address</label>
+				<input type="email" name="email" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+				<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+			</div>
+	
+			<div class="mb-3">
+				<label for="exampleInputPassword1" class="form-label">Password </label>
+				<input type="password" name="password" required class="form-control" id="exampleInputPassword1">
+			</div>
+	
+			<div class="mb-3">
+				<label for="cnfpassword" class="form-label">Confirm Password </label>
+				<input type="password" name="cnfpassword" required class="form-control" id="cnfpassword">
+			</div>
+			
+			<div class="mb-3">
+				<label for="contact" class="form-label">Contact No. : </label>
+				<input type="text" name="contact" required class="form-control" id="contact">
+			</div>
+			
+			<div class="mb-3">
+				<label for="address" class="form-label">Address</label>
+				<input type="text" name="address" required class="form-control" id="address">
+			</div>
 
-  <form action="{% url 'register_view' %}" method="post">
-		{% csrf_token %}
+			<div class="mb-3">
+				<label for="state" class="form-label">State:</label>
+				<input type="text" name="state" required class="form-control" id="state">
+			</div>
 
-		<div class="mb-3">
-			<label for="username" class="form-label">First Name: </label>
-			<input type="text" name="first_name" required class="form-control" id="username" aria-describedby="emailHelp">
-		</div>
+			<div class="mb-3">
+				<label for="city" class="form-label">City:</label>
+				<input type="text" name="city" required class="form-control" id="city">
+			</div>
 
-		<div class="mb-3">
-			<label for="first_name" class="form-label">Last_name: </label>
-			<input type="text" name="last_name" required class="form-control" id="first_name" aria-describedby="emailHelp">
-		</div>
-
-		<div class="mb-3">
-			<label for="username" class="form-label">Username: </label>
-			<input type="text" name="username" required class="form-control" id="username" aria-describedby="emailHelp">
-		</div>
-		
-		<div class="mb-3">
-			<label for="exampleInputEmail1" class="form-label">Email address</label>
-			<input type="email" name="email" required class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-			<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-		</div>
-
-		<div class="mb-3">
-			<label for="exampleInputPassword1" class="form-label">Password </label>
-			<input type="password" name="password" required class="form-control" id="exampleInputPassword1">
-		</div>
-
-		<div class="mb-3">
-			<label for="cnfpassword" class="form-label">Confirm Password </label>
-			<input type="password" name="cnfpassword" required class="form-control" id="cnfpassword">
-		</div>
-		
-		<div class="mb-3">
-			<label for="contact" class="form-label">Contact No. : </label>
-			<input type="text" name="contact" required class="form-control" id="contact">
-		</div>
-		
-		<div class="mb-3">
-			<label for="address" class="form-label">Address</label>
-			<input type="text" name="address" required class="form-control" id="address">
-		</div>
-
-		<div class="mb-3">
-			<label for="Select" class="form-label">Tell me about yourself. Are you a?</label>
-			<select class="form-select form-select mb-3" required aria-label="Large select example" name="user_type">
-				<option selected>----</option>
-				<option value="provider">Blood Provider </option>
-				<option value="reciever">Blood Seeker </option>
-			</select>
-		</div>
-
-		<button type="submit" class="btn btn-primary">Submit</button>
-	</form>
+			<div class="mb-3">
+				<label for="Select" class="form-label">Tell me about yourself. Are you a?</label>
+				<select class="form-select form-select mb-3" required aria-label="Large select example" name="user_type">
+					<option selected>----</option>
+					<option value="provider">Blood Provider </option>
+					<option value="reciever">Blood Seeker </option>
+				</select>
+			</div> -->
+			<div class="d-flex justify-content-center">
+				<button type="submit" class="btn btn-primary">Register</button>
+			</div>
+		</form>
+	</div>
+</div>
+ 
   
 {% endblock %}
