--- a/life_blood_network/homepage/templates/homepage/blood_info_page.html
+++ b/life_blood_network/homepage/templates/homepage/blood_info_page.html
@@ -71,8 +71,8 @@
               <th scope="row">1</th>
               <td>Mark</td>
               <td>Otto</td>
-              <td>@mdo</td>
-            </tr>
+              <td>mdo</td>
+            </tr>@@@@@@@@@@@
             <tr>
               <th scope="row">2</th>
               <td>Jacob</td>
