--- a/life_blood_network/homepage/templates/homepage/login.html
+++ b/life_blood_network/homepage/templates/homepage/login.html
@@ -16,7 +16,7 @@
 				{% csrf_token %}
 		
 				<div class="mb-3">
-					<label for="exampleInputEmail1" class="form-label">Email address</label>
+					<label for="exampleInputEmail1" class="form-label"> Username </label>
 					<input type="text" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 					<div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
 				</div>
