--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,23 +8,19 @@
   <title>{% block title %} layout {% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  {% block style %}
-
-  {% endblock %}
-
+  <link rel="stylesheet" href="{% static 'homepage/layout.css' %}"/>
+  {% block style %}{% endblock %}
 </head>
 
 <body>
 
-  <div class="container-xxl">
+  <div class="container-fluid">
     <!-- navigation bar or top bar  -->
 
-    <div class="row">
-      <div class="col">
         <!-- add here anything in between  -->
         <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid ms-auto">
-            <a class="navbar-brand" href="{% url 'index_page_view' %}">Blood-Network</a>
+          <div class="container-fluid">
+            <a class="navbar-brand " href="{% url 'index_page_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}"/> Blood Network</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -61,8 +58,6 @@
         {% block body %}
 
         {% endblock%}
-      </div>
-    </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
