--- a/life_blood_network/homepage/templates/homepage/login.html
+++ b/life_blood_network/homepage/templates/homepage/login.html
@@ -3,15 +3,22 @@
 {% load static %}
 
 {% block body %}
-  <h1>login</h1>
   {% if message %}
-	<div class="alert alert-danger" role="alert">
+	<div class="alert alert-warning alert-dismissible fade show" role="alert">
 		{{ message }}
+
 		<button type="button text-align-end" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
   {% endif %}
+
 	<div class="row justify-content-center">
-		<div class="col-4" >
+		<div class="col-4 d-flex justify-content-center">
+			<h1>Login</h1>
+		</div>
+	</div>
+
+	<div class="row justify-content-center">
+		<div class="col-4">
 			<form action="{% url 'login_view' %}" method="post">
 				{% csrf_token %}
 		
@@ -30,7 +37,7 @@
 				</div>
 		
 			</form>
-		</div>
+		 </div>
 	</div>
 
 	
