--- a/life_blood_network/homepage/templates/homepage/add_blood.html
+++ b/life_blood_network/homepage/templates/homepage/add_blood.html
@@ -8,7 +8,7 @@
   <div class="row justify-content-center">
     <div class="col-4">
       <h1>Add More Stock If Available</h1>
-      <form action="{% url 'add_blood_page_view'%}" method="post">
+      <form action="{% url 'add_blood_view'%}" method="post">
         {% csrf_token %}
         {{ form }}
         <button type="submit" class="btn btn-danger"> Submit</button>
