--- a/life_blood_network/homepage/templates/homepage/layout.html
+++ b/life_blood_network/homepage/templates/homepage/layout.html
@@ -1,26 +1,26 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %} layout {% endblock %}</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="{% static 'homepage/layout.css' %}"/>
   {% block style %}{% endblock %}
 </head>
 
 <body>
 
-  <div class="container-fluid">
+  <div class="container-xxl">
     <!-- navigation bar or top bar  -->
 
         <!-- add here anything in between  -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg bg-white border-white mb-auto">
           <div class="container-fluid">
-            <a class="navbar-brand " href="{% url 'index_page_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}"/> Blood Network</a>
+            <a class="navbar-brand " href="{% url 'index_view' %}"><img id="logo-img" src="{% static 'homepage/logo.svg' %}"/> Blood Network</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'index_page_view'%}">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'index_view'%}">Home</a>
                 </li>
 
                 <li class="nav-item">
@@ -37,15 +37,15 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'order_page_view'%}">My Orders</a>
+                  <a class="nav-link" href="{% url 'my_orders_view'%}">My Orders</a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'add_blood_page_view'%}">Add Blood-Stock</a>
+                  <a class="nav-link" href="{% url 'add_blood_view'%}">Add Blood-Stock</a>
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'my_profile' %}">My Profile</a>
+                  <a class="nav-link" href="{% url 'my_profile_view' %}">My Profile</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'logout_view'%}">Logout</a>
